apps/dev/orbit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orbit-dev
  labels:
    kubernetes.io/metadata.name: orbit-dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
